--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prettier": "prettier --write"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@vueuse/core": "^8.2.0",
+    "pinia": "^2.0.12",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
