--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "commitlint": "^19.6.1",
         "commitlint-config-cz": "^0.13.3",
         "commitlint-config-gitmoji": "^2.3.1",
+        "commitlint-plugin-function-rules": "^4.0.1",
         "cz-conventional-changelog": "^3.3.0",
         "cz-customizable": "^7.3.0",
         "eslint": "^9.17.0",
