--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "vue-tsc --noEmit && vite build",
         "preview": "vite preview",
         "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
-        "eslint": "eslint -c .eslintrc.js",
-        "prettier": "prettier --write",
+        "eslint": "eslint --ext .ts,.js,.vue,.tsx,.jsx --ignore-path .gitignore --fix src",
+        "prettier": "prettier .  --write",
         "commit:comment": "引导设置规范化的提交信息",
         "commit": "git-cz"
     },
@@ -33,8 +33,8 @@
         "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
         "@types/node": "^22.10.2",
-        "@typescript-eslint/eslint-plugin": "^8.18.1",
-        "@typescript-eslint/parser": "^8.18.1",
+        "@typescript-eslint/eslint-plugin": "^5.16.0",
+        "@typescript-eslint/parser": "^5.16.0",
         "@vitejs/plugin-vue": "^2.2.0",
         "commitizen": "^4.3.1",
         "commitlint": "^19.6.1",
@@ -43,13 +43,13 @@
         "commitlint-plugin-function-rules": "^4.0.1",
         "cz-conventional-changelog": "^3.3.0",
         "cz-customizable": "^7.3.0",
-        "eslint": "^9.17.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "eslint-plugin-vue": "^9.32.0",
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^8.5.0",
         "husky": "^7.0.4",
         "lint-staged": "^15.2.11",
-        "prettier": "^3.4.2",
+        "prettier": "^2.6.1",
         "typescript": "^4.5.4",
         "vite": "^2.8.0",
         "vue-tsc": "^0.29.8"
